added findByEnterpriseId route
