# src/controller/UserController.ts
@@ -4,6 +4,7 @@ import { User } from "../entity/User.entity";
 import * as bcrypt from "bcrypt";
 import { Role } from "../entity/Role.entity";
 import * as jwt from 'jsonwebtoken';
+import { Enterprise } from "../entity/Enterprise.entity";
 
 export const authenticate = async (req: Request, res: Response) => {
   const UserRepository = getRepository(User);
@@ -44,11 +45,29 @@ export const authenticate = async (req: Request, res: Response) => {
   }
 }
 
+export const findUserByEnterpriseId = async (req: Request, res: Response) => {
+  const userRepository = getRepository(User);
+  const { id } = req.params;
+
+  try {
+
+    const users = await userRepository.find({
+      where : {
+        enterprise : id
+      }
+    });
+    return res.send(users);
+  } catch (error) {
+    throw new Error(`Internal server error : ${error}`);
+  }
+}
+
 export const registerUser = async (req: Request, res: Response) => {
   const userRepository = getRepository(User);
   const roleRepository = getRepository(Role);
+  const enterpriseRepository = getRepository(Enterprise);
 
-  const { userName, email, password, passwordConfirm, roleTag } = req.body;
+  const { userName, email, password, passwordConfirm, roleTag, enterpriseId } = req.body;
 
   try {
     const foundUser = await userRepository.findOne({
@@ -57,13 +76,23 @@ export const registerUser = async (req: Request, res: Response) => {
       },
     });
 
+    const foundEnterprise = await enterpriseRepository.findOne({
+      where : {
+        id : enterpriseId
+      }
+    })
+
     if (password != passwordConfirm) {
       return res.status(400).json({ message: "Password do not match" });
     } else if (!!foundUser) {
       return res.status(409).send({
         message: "Email is already in use",
       });
-    } else {
+    } else if (!foundEnterprise){
+      return res.status(401).send({
+        message: "Enterprise not found",
+      });
+    }else {
       let hashedPassword = await bcrypt.hash(password, 8);
 
       let foundRole = await roleRepository.findOne({
@@ -77,12 +106,15 @@ export const registerUser = async (req: Request, res: Response) => {
           message: "Role not found",
         });
       } else {
+
+
         const user = new User({
           userName: userName,
           createAt: new Date(),
           email: email,
           password: hashedPassword,
           role: foundRole,
+          enterprise : foundEnterprise
         });
 
         await userRepository.save(user);
