# swaggerconfig.json
@@ -32,6 +32,32 @@
         }
       }
     },
+    "/findUserByEnterpriseId/{id}" : {
+      "get" : {
+        "summary" : "",
+        "description" : "",
+        "tags" : ["User"],
+        "parameters" : [
+          {
+            "name" : "id",
+            "in" : "path",
+            "description" : "enterprise id",
+            "required" : "true"
+          }
+        ],
+        "security" : [{"bearerAuth" : []}],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "type" : "array"
+              }
+            }
+          }
+        }
+      }
+    },
     "/version" : {
       "get" : {
         "summary" : "API version",
@@ -63,9 +89,9 @@
               "examples" : {
                 "enterprise" : {
                   "value" : {
-                    "enterpriseName" : "TEST 1",
-                    "userName" : "NAME 1",
-                    "email" : "test1@email.com",
+                    "enterpriseName" : "Enterprise 1",
+                    "userName" : "Name 1",
+                    "email" : "admin@email.com",
                     "password" : "12345678",
                     "passwordConfirm" : "12345678"
                   }
@@ -91,6 +117,7 @@
         "sumary" : "",
         "description" : "",
         "tags" : ["Department"],
+        "security" : [{"bearerAuth" : []}],
         "requestBody" : {
           "content" : {
             "application/json" : {
@@ -131,7 +158,8 @@
                     "email" : "test1@email.com",
                     "password" : "12345678",
                     "passwordConfirm" : "12345678",
-                    "roleTag" : "ADMIN"
+                    "roleTag" : "ADMIN",
+                    "enterpriseId" : "1"
                   }
                 }
               }
@@ -237,6 +265,9 @@
           },
           "roleTag" : {
             "type" : "string"
+          },
+          "enterpriseId" : {
+            "type" : "number"
           }
         }
       },
